backend/kubernetes/booksService/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: books-backend-ingress
  namespace: tf-tutorial
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: books.service.local
    - http:
        paths:
          - path: /books
            backend:
              serviceName: books-service
              servicePort: 5000
